unpackaged/main/default/objects/Origination_Documents__c/Origination_Documents__c.object-meta.xml
<CustomObject>
    <label>Origination Documents</label>
    <nameField>
        <label>Or Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Origination Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>