unpackaged/main/default/objects/Origination_Documents__c/fields/BoxUrl__c.field-meta.xml
<CustomField>
    <fullName>BoxUrl__c</fullName>
    <label>BoxUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>