unpackaged/main/default/objects/Origination_Documents__c/fields/Code_FF__c.field-meta.xml
<CustomField>
    <fullName>Code_FF__c</fullName>
    <label>Code FF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>