unpackaged/main/default/objects/Origination_Documents__c/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <formula>Application__r.Lead_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Id</label>
    <type>Text</type>
</CustomField>