unpackaged/main/default/objects/Origination_Documents__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>preciseid</fullName>
            </value>
            <value>
                <fullName>talx</fullName>
            </value>
            <value>
                <fullName>linked_acct</fullName>
            </value>
            <value>
                <fullName>cbr</fullName>
            </value>
            <value>
                <fullName>credit_authorization</fullName>
            </value>
            <value>
                <fullName>borrower_bank_agreement</fullName>
            </value>
            <value>
                <fullName>payoff_privacy_policy</fullName>
            </value>
            <value>
                <fullName>privacy_notice</fullName>
            </value>
            <value>
                <fullName>terms_of_use</fullName>
            </value>
            <value>
                <fullName>autopay_authorization</fullName>
            </value>
            <value>
                <fullName>eca</fullName>
            </value>
            <value>
                <fullName>talx_hr</fullName>
            </value>
            <value>
                <fullName>linked_acct_hr</fullName>
            </value>
            <value>
                <fullName>bureau_report_hr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>