unpackaged/main/default/objects/Origination_Documents__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>BoxUrl__c</columns>
    <columns>Code_FF__c</columns>
    <columns>Lead_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application__c</field>
        <operation>equals</operation>
        <value>APP-0000704961</value>
    </filters>
    <label>All</label>
</ListView>